--- a/Shoe Collector/Base.lproj/Main.storyboard
+++ b/Shoe Collector/Base.lproj/Main.storyboard
@@ -23,17 +23,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="1Ov-Pl-Fcv">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zNd-ha-fsg">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="zNd-ha-fsg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="60d-Ne-ykI"/>
-                            <constraint firstItem="zNd-ha-fsg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Lfn-TV-Ayq"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zNd-ha-fsg" secondAttribute="bottom" id="Un4-pX-OOu"/>
-                            <constraint firstAttribute="trailing" secondItem="zNd-ha-fsg" secondAttribute="trailing" id="a64-ki-sJO"/>
+                            <constraint firstItem="zNd-ha-fsg" firstAttribute="leading" secondItem="1Ov-Pl-Fcv" secondAttribute="leading" id="0Je-IS-zs2"/>
+                            <constraint firstItem="zNd-ha-fsg" firstAttribute="top" secondItem="1Ov-Pl-Fcv" secondAttribute="bottom" id="1Dx-Sa-aRW"/>
+                            <constraint firstItem="1Ov-Pl-Fcv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2rP-Uu-2NZ"/>
+                            <constraint firstItem="zNd-ha-fsg" firstAttribute="top" secondItem="1Ov-Pl-Fcv" secondAttribute="bottom" id="Dib-mf-PB2"/>
+                            <constraint firstAttribute="trailing" secondItem="zNd-ha-fsg" secondAttribute="trailing" id="G3G-Ey-oGR"/>
+                            <constraint firstItem="zNd-ha-fsg" firstAttribute="trailing" secondItem="1Ov-Pl-Fcv" secondAttribute="trailing" id="HKU-xS-yIu"/>
+                            <constraint firstItem="zNd-ha-fsg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tfq-L8-LXQ"/>
+                            <constraint firstItem="1Ov-Pl-Fcv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="UXU-7U-EFC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zNd-ha-fsg" secondAttribute="bottom" id="bbt-QS-NBz"/>
+                            <constraint firstAttribute="trailing" secondItem="1Ov-Pl-Fcv" secondAttribute="trailing" id="uk9-0b-Cod"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="00X-Jz-tM4">
@@ -44,12 +54,13 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchController" destination="1Ov-Pl-Fcv" id="zsL-Xb-4f1"/>
                         <outlet property="tableview" destination="zNd-ha-fsg" id="QTv-EO-bNY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1169" y="-544"/>
+            <point key="canvasLocation" x="1168.8" y="-545.57721139430294"/>
         </scene>
         <!--Create Game View Controller-->
         <scene sceneID="uK1-my-uAV">
@@ -63,8 +74,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5084806-1333047114-50245.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="cu5-Yf-Mtf">
-                                <rect key="frame" x="41" y="89" width="293" height="234"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cu5-Yf-Mtf">
+                                <rect key="frame" x="41" y="88" width="293" height="234"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of Shoes" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4cU-WL-xOt">
                                 <rect key="frame" x="41" y="353" width="293" height="30"/>
@@ -75,6 +86,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6v7-fD-fLi">
+                                <rect key="frame" x="165" y="463" width="45" height="30"/>
+                                <state key="normal" title="Delete"/>
+                                <connections>
+                                    <action selector="addShoes:" destination="uRd-sU-rQ1" eventType="touchUpInside" id="a7S-5V-G7Z"/>
+                                    <action selector="deleteShoe:" destination="uRd-sU-rQ1" eventType="touchUpInside" id="qNh-Ds-uB2"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lso-kr-kI4">
                                 <rect key="frame" x="41" y="408" width="293" height="30"/>
                                 <state key="normal" title="Add"/>
@@ -82,25 +101,18 @@
                                     <action selector="addShoes:" destination="uRd-sU-rQ1" eventType="touchUpInside" id="AlM-iU-Jdr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6v7-fD-fLi">
-                                <rect key="frame" x="41" y="461" width="293" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Delete"/>
-                                <connections>
-                                    <action selector="addShoes:" destination="uRd-sU-rQ1" eventType="touchUpInside" id="a7S-5V-G7Z"/>
-                                    <action selector="deleteShoe:" destination="uRd-sU-rQ1" eventType="touchUpInside" id="qNh-Ds-uB2"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="8zp-Ea-fiu" firstAttribute="top" secondItem="4cU-WL-xOt" secondAttribute="bottom" constant="284" id="42G-LR-NAv"/>
+                            <constraint firstItem="Lso-kr-kI4" firstAttribute="top" secondItem="4cU-WL-xOt" secondAttribute="bottom" constant="25" id="A54-8x-FwJ"/>
                             <constraint firstItem="cu5-Yf-Mtf" firstAttribute="leading" secondItem="1NX-rI-kD3" secondAttribute="leadingMargin" constant="25" id="HIj-4N-XnQ"/>
                             <constraint firstItem="4cU-WL-xOt" firstAttribute="centerX" secondItem="1NX-rI-kD3" secondAttribute="centerX" id="IuZ-vs-GZb"/>
-                            <constraint firstItem="cu5-Yf-Mtf" firstAttribute="top" secondItem="DhR-PB-78I" secondAttribute="bottom" constant="25" id="Pa1-sj-5vl"/>
+                            <constraint firstItem="cu5-Yf-Mtf" firstAttribute="top" secondItem="DhR-PB-78I" secondAttribute="bottom" constant="24" id="Pa1-sj-5vl"/>
+                            <constraint firstItem="6v7-fD-fLi" firstAttribute="top" secondItem="Lso-kr-kI4" secondAttribute="bottom" constant="25" id="RQL-BB-dl9"/>
                             <constraint firstItem="cu5-Yf-Mtf" firstAttribute="centerX" secondItem="1NX-rI-kD3" secondAttribute="centerX" id="a9p-1O-qXE"/>
-                            <constraint firstItem="Lso-kr-kI4" firstAttribute="top" secondItem="4cU-WL-xOt" secondAttribute="bottom" constant="25" id="byT-YW-rBB"/>
-                            <constraint firstItem="4cU-WL-xOt" firstAttribute="top" secondItem="cu5-Yf-Mtf" secondAttribute="bottom" constant="30" id="rLd-SX-aWV"/>
+                            <constraint firstItem="6v7-fD-fLi" firstAttribute="centerX" secondItem="1NX-rI-kD3" secondAttribute="centerX" id="gPH-aX-yKW"/>
+                            <constraint firstItem="4cU-WL-xOt" firstAttribute="top" secondItem="cu5-Yf-Mtf" secondAttribute="bottom" constant="31" id="rLd-SX-aWV"/>
                             <constraint firstItem="Lso-kr-kI4" firstAttribute="width" secondItem="4cU-WL-xOt" secondAttribute="width" id="sdD-DE-9Gg"/>
                             <constraint firstItem="4cU-WL-xOt" firstAttribute="width" secondItem="cu5-Yf-Mtf" secondAttribute="width" id="uaA-Z2-hi2"/>
                             <constraint firstItem="Lso-kr-kI4" firstAttribute="centerX" secondItem="4cU-WL-xOt" secondAttribute="centerX" id="vVA-if-mWp"/>
@@ -121,6 +133,8 @@
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <connections>
                         <outlet property="addButton" destination="Lso-kr-kI4" id="JYh-zD-hm4"/>
                         <outlet property="deleteButton" destination="6v7-fD-fLi" id="dRt-id-B8w"/>
@@ -130,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ySO-8l-Ehz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2000.8" y="-544.67766116941539"/>
+            <point key="canvasLocation" x="1882" y="-545"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UdJ-Hl-msU">
@@ -151,7 +165,4 @@
             <point key="canvasLocation" x="340" y="-543.77811094452773"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="5084806-1333047114-50245.jpg" width="1680" height="1050"/>
-    </resources>
 </document>
